# yt-upload-manager

./: .env.example  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bun.lockb  dibr.md  flake.nix  justfile  package-lock.json  package.json  vitest.config.ts
pb_data/: auxiliary.db  data.db  logs.db
pb_migrations/: 1777131310_created_channels.js  1777131310_created_internal_migrations.js  1777131320_create_staging.js
scripts/: generate-types.ts  migrate.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/bindings/: youtube_types.ts
src/components/: App.tsx  BatchManager.test.tsx  BatchManager.tsx  ChannelManager.tsx  DashboardLayout.tsx  LogConsole.test.tsx  LogConsole.tsx  ThemeToggle.tsx
src/lib/: compression.test.ts  compression.ts  env.test.ts  env.ts  logger.test.ts  logger.ts  mappers.test.ts  mappers.ts  pocketbase.ts
src/lib/channel/: config.ts
src/lib/tenant/: config.ts
src/lib/youtube/: batch_processor.test.ts  enrichment.test.ts  enrichment.ts  service.test.ts  service.ts
src/pages/: index.astro
src/test/: setup.ts  staging_e2e.test.ts
